--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
